# yolov8

./: .gitignore  README.md
cpu/: docker-compose.yml
docker/: Dockerfile
gpu/: docker-compose.yml
requirements/cpu/: pyproject.toml
requirements/gpu/: pyproject.toml
ui/: app.py
yolo/: finetuning.py
